crates/arf-console/src/repl/snapshots/arf__repl__banner__tests__banner_default_r_not_initialized.snap
---
source: crates/arf-console/src/repl/banner.rs
expression: banner
---
# arf console v<version>
# Edit mode: emacs
# R is not initialized. Commands will not be evaluated.
# Type :cmds for meta commands list, Ctrl+D to exit.
