crates/arf-console/src/repl/snapshots/arf__repl__banner__tests__banner_vi_mode.snap
---
source: crates/arf-console/src/repl/banner.rs
expression: banner
---
# arf console v<version>
# Edit mode: vi
# R is ready.
# Type :cmds for meta commands list, Ctrl+D to exit.
